submitting is now with enter key and the button was removed, prevent whitespaces messages to be sent

--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,7 @@
 
 .textbox {
     width: 317px;
-    /*height: 50px;*/
-    height: 30px;
+    height: 50px;
     padding: 5px;
     resize: none;
     font-size: medium;
